--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database=cup
-spring.data.mongodb.uri=mongodb://localhost/cup
+spring.data.mongodb.database=cupBidder
+spring.data.mongodb.uri=mongodb://localhost/cupBidder
