--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,6 +27,9 @@ configurations {
 }
 
 dependencies {
+    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+    providedCompile('junit:junit:4.12')
+
     compile('org.springframework.boot:spring-boot-starter-aop')
     compile('org.springframework.boot:spring-boot-starter-cache')
     compile('org.springframework.boot:spring-boot-starter-data-mongodb')
@@ -36,6 +39,9 @@ dependencies {
 
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.4.0")
 
-    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    //testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('junit:junit:4.12')
+    testCompile('org.hamcrest:hamcrest-core:1.3')
+    testCompile('org.mockito:mockito-all:2.0.2-beta')
+
 }
