--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.database=cupBidder
 spring.data.mongodb.uri=mongodb://localhost/cupBidder
+
+spring.jackson.serialization.write_dates_as_timestamps=false
